--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ body {
     border-radius: 25px;
 }
 
-.heading{
+.heading {
     color: var(--Text-Primary, #191919);
     font-family: Roboto;
     font-size: 14px;
@@ -212,23 +212,23 @@ body {
     font-weight: 500;
     line-height: 24px;
     width: 100%;
-    height:100%;
+    height: 100%;
     align-items: baseline;
 }
 
-.heading-chosen{
+.heading-chosen {
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
     width: 100%;
-    height:100%;
+    height: 100%;
     align-items: baseline;
     color: #FFF;
 }
 
-.button{
+.button {
     display: flex;
     padding: 0px 6px;
     justify-content: center;
@@ -254,7 +254,7 @@ body {
     align-items: center;
 }
 
-.content{
+.content {
     padding-top: 61px;
     padding-left: 260px;
     align-items: center;
@@ -264,7 +264,7 @@ body {
     border-left: 1px solid #E5E5E5;
 }
 
-.content-body{
+.content-body {
     padding-top: 24px;
     padding-bottom: 40px;
     display: flex;
@@ -277,7 +277,7 @@ body {
     align-items: flex-start;
 }
 
-.content-heading{
+.content-heading {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -300,7 +300,7 @@ body {
     flex: 1 0 0;
 }
 
-.post{
+.post {
     background-color: #FFF;
     border-radius: 25px;
     border-color: #767676;
@@ -308,7 +308,7 @@ body {
     gap: 24px;
 }
 
-.post-heading{
+.post-heading {
     display: flex;
     padding: 16px;
     flex-direction: column;
@@ -318,23 +318,23 @@ body {
 
 }
 
-.info-action{
+.info-action {
     display: flex;
     padding-bottom: 8px;
     align-items: center;
     gap: 16px;
     align-self: stretch;
-    width:100%;
+    width: 100%;
 }
 
-.user-info{
+.user-info {
     display: flex;
     align-items: center;
     gap: 12px;
     flex: 1 0 0;
 }
 
-.post-avatar{
+.post-avatar {
     background-image: url("./assets/postavatar.png");
     width: 48px;
     height: 48px;
@@ -345,57 +345,61 @@ body {
     object-fit: cover;
 }
 
-.name-time{}
+.name-time {}
 
-.post-name{
+.post-name {
     color: var(--Text-Primary, #191919);
     /* Heading Bold/Heading 6 */
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
+    /* 171.429% */
     white-space: nowrap;
 }
 
-.post-time{
+.post-time {
     color: var(--Text-Third, #767676);
     /* Body Text/Minor Text */
     font-family: Roboto;
     font-size: 13px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px; /* 153.846% */
+    line-height: 20px;
+    /* 153.846% */
     align-self: stretch;
 }
 
-.post-text{
+.post-text {
     color: var(--Text-Primary, #191919);
-/* Body Text/Default */
+    /* Body Text/Default */
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
+    /* 171.429% */
 }
 
-.post-link{
+.post-link {
     color: var(--Text-Hyperlink, #0E489B);
-/* Heading Medium/Heading 6 */
+    /* Heading Medium/Heading 6 */
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
+    /* 171.429% */
 }
 
-.post-img{
+.post-img {
     width: 620px;
     height: 348px;
     flex-shrink: 0;
 }
 
-.post-action{
+.post-action {
     display: flex;
     padding: 8px 16px;
     align-items: center;
@@ -410,7 +414,7 @@ body {
     background: var(--Background-BG-2, #E5E5E5);
 }
 
-.post-action-button{
+.post-action-button {
     cursor: pointer;
 }
 
@@ -432,7 +436,7 @@ body {
     background: var(--Text-White, #FFF);
 }
 
-.post-commentsection{
+.post-commentsection {
     display: flex;
     padding: 16px;
     flex-direction: column;
@@ -447,10 +451,11 @@ body {
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
+    /* 171.429% */
 }
 
-.post-comment{
+.post-comment {
     display: flex;
     align-items: flex-start;
     gap: 12px;
@@ -458,7 +463,199 @@ body {
     white-space: nowrap;
 }
 
-.post-comment-action{
+/* .post-comment-action{
+    display: flex;
+    align-items: end;
+    gap: 8px;
+    float: right;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+    margin-top: 10px;
+} */
+
+.post-comment-whitespace {
+    width: 100%
+}
+
+/* .post-comment-action-block {
+    padding: 5px;
+    width: 25px;
+    height: 25px;
+    border-radius: 5px;
+    justify-content: center;
+    cursor: pointer;
+} */
+
+.view-comments {
+    color: var(--Text-Hyperlink, #0E489B);
+    /* Heading Medium/Heading 6 */
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 171.429% */
+}
+
+.comment-bar {
+    display: flex;
+    padding: 0px 16px 16px 16px;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+    border-radius: 4px;
+    background: var(--Text-White, #FFF);
+}
+
+.comment-avatar {
+    width: 32px;
+    height: 32px;
+    background-size: cover;
+    background-position: top center;
+    border-radius: 50%;
+    cursor: pointer;
+    object-fit: cover;
+}
+
+.comment-info {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+}
+
+.comment-time {
+    flex: 1 0 0;
+    color: var(--Text-Third, #767676);
+    /* Body Text/Caption */
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 18px;
+    /* 150% */
+    white-space: nowrap;
+}
+
+.comment-text {
+    align-self: stretch;
+    color: var(--Text-Primary, #191919);
+    /* Body Text/Default */
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 171.429% */
+}
+
+.commentbar-avatar {
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+    background-position: top center;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.commentbar-inputfield {
+    display: flex;
+    padding: 4px 4px 4px 12px;
+    align-items: center;
+    gap: 8px;
+    flex: 1 0 0;
+    border-radius: 20px;
+    background: var(--Background-BG-3, #F0F0F0);
+}
+
+.commentbar-inputfield-frame {
+    display: flex;
+    padding: 4px 0px;
+    align-items: flex-start;
+    gap: 10px;
+    flex: 1 0 0;
+}
+
+.commentbar-inputfield-frame-textbox {
+    flex: 1 0 0;
+    color: #A0A0A0;
+    /* Body Text/Default */
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 171.429% */
+    background-color: transparent;
+    border: transparent;
+    outline: none;
+}
+
+.commentbar-inputfield-frame-textbox-focused {
+    flex: 1 0 0;
+    color: black;
+    /* Body Text/Default */
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 171.429% */
+    background-color: transparent;
+    border: transparent;
+    outline: none;
+}
+
+.comment-button {
+    display: flex;
+    padding: 4px 16px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 40px;
+    background: var(--Branding-Priamry, #007C7C);
+    cursor: pointer;
+}
+
+.comment-button-shaded {
+    display: flex;
+    padding: 4px 16px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 40px;
+    opacity: 0.4;
+    background: var(--Branding-Priamry, #007C7C);
+}
+
+.comment-post {
+    color: var(--Text-White, #FFF);
+
+    /* Heading Bold/Heading 6 */
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    /* 171.429% */
+}
+
+.post-comment:hover {
+    background-color: #f9f9f9;
+}
+
+.post-comment:hover .user-comment-action {
+    display: inline-block;
+    /* opacity: 1; */
+}
+
+.post-comment .user-comment-action {
+    display: none;
+    /* opacity: 0; */
+}
+
+.post-comment .user-comment-action .post-user-comment-action {
+    opacity: 1;
     display: flex;
     align-items: end;
     gap: 8px;
@@ -470,11 +667,7 @@ body {
     margin-top: 10px;
 }
 
-.post-comment-whitespace{
-    width: 100%
-}
-
-.post-comment-action-block {
+.post-comment .user-comment-action .post-user-comment-action .post-comment-action-block {
     padding: 5px;
     width: 25px;
     height: 25px;
@@ -483,148 +676,21 @@ body {
     cursor: pointer;
 }
 
-.view-comments{
-    color: var(--Text-Hyperlink, #0E489B);
-/* Heading Medium/Heading 6 */
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px; /* 171.429% */
-}
-
-.comment-bar{
+.cancel-button {
     display: flex;
-    padding: 0px 16px 16px 16px;
-    align-items: flex-start;
-    gap: 8px;
-    align-self: stretch;
-    border-radius: 4px;
-    background: var(--Text-White, #FFF);
-}
-
-.comment-avatar{
-    width: 32px;
-    height: 32px;
-    background-size: cover;
-    background-position: top center;
-    border-radius: 50%;
-    cursor: pointer;
-    object-fit: cover;
-}
-
-.comment-info{
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    align-self: stretch;
-}
-
-.comment-time{
-    flex: 1 0 0;
-    color: var(--Text-Third, #767676);
-    /* Body Text/Caption */
-    font-family: Roboto;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px; /* 150% */
-    white-space: nowrap;
-}
-
-.comment-text{
-    align-self: stretch;
-    color: var(--Text-Primary, #191919);
-    /* Body Text/Default */
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 171.429% */
-}
-
-.commentbar-avatar{
-    width: 40px;
-    height: 40px;
-    background-size: cover;
-    background-position: top center;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.commentbar-inputfield{
-    display: flex;
-    padding: 4px 4px 4px 12px;
-    align-items: flex-end;
-    gap: 8px;
-    flex: 1 0 0;
-    border-radius: 20px;
-    background: var(--Background-BG-3, #F0F0F0);
-}
-
-.commentbar-inputfield-frame{
-    display: flex;
-    padding: 4px 0px;
-    align-items: flex-start;
-    gap: 10px;
-    flex: 1 0 0;
-}
-
-.commentbar-inputfield-frame-textbox{
-    flex: 1 0 0;
-    color: #A0A0A0;
-    /* Body Text/Default */
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 171.429% */
-    background-color: transparent;
-    border: transparent;
-    outline: none;
-}
-
-.commentbar-inputfield-frame-textbox-focused{
-    flex: 1 0 0;
-    color: black;
-    /* Body Text/Default */
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px; /* 171.429% */
-    background-color: transparent;
-    border: transparent;
-    outline: none;
-}
-
-.comment-button{
-    display: flex;
-    padding: 4px 16px;
+    padding: 2px 8px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 40px;
-    background: var(--Branding-Priamry, #007C7C);
+    background: var(--Branding-Priamry, #d3d3d3);
     cursor: pointer;
 }
 
-.comment-button-shaded{
-    display: flex;
-    padding: 4px 16px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 40px;
-    opacity: 0.4;
-    background: var(--Branding-Priamry, #007C7C);
-}
-
-.comment-post{
-    color: var(--Text-White, #FFF);
-
-    /* Heading Bold/Heading 6 */
+.cancel-button-text {
+    color: #36454F;
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 11px;
     font-style: normal;
     font-weight: 700;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
 }
