--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     text-decoration: none;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -371,7 +372,7 @@ body {
     align-self: stretch;
 }
 
-.post-text {
+.post-text-shortened {
     color: var(--Text-Primary, #191919);
     /* Body Text/Default */
     font-family: Roboto;
@@ -379,7 +380,23 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* 171.429% */
+    display: block;
+    /* or inline-block */
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    overflow: hidden;
+    max-height: 3.6em;
+    /* where max-height: = line-height: × <number-of-lines> in em. */
+}
+
+.post-text-full {
+    color: var(--Text-Primary, #191919);
+    /* Body Text/Default */
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .post-link {
@@ -391,12 +408,55 @@ body {
     font-weight: 500;
     line-height: 24px;
     /* 171.429% */
+    cursor: pointer;
 }
 
-.post-img {
+.post-img-container {
     width: 620px;
     height: 348px;
     flex-shrink: 0;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    transform: translateY(50%);
+    align-items: center;
+}
+
+.slide {
+    position: absolute;
+    /* top: 50%; */
+    /* transform: translateY(-50%); */
+    flex: 0 0 100%;
+    transition: transform 1s ease;
+}
+
+.post-img{
+
+}
+
+.post-dotslider {
+    position: relative;
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-decoration: none;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
 }
 
 .post-action {
@@ -510,7 +570,7 @@ body {
 }
 
 .comment-avatar {
-    width: 32px;
+    min-width: 32px;
     height: 32px;
     background-size: cover;
     background-position: top center;
