--- a/style.css
+++ b/style.css
@@ -412,28 +412,25 @@ body {
 }
 
 .post-img-container {
+    position: relative;
     width: 620px;
     height: 348px;
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
     margin: auto;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    transform: translateY(50%);
-    align-items: center;
+    /* overflow: hidden; */
 }
 
 .slide {
-    position: absolute;
-    /* top: 50%; */
-    /* transform: translateY(-50%); */
-    flex: 0 0 100%;
     transition: transform 1s ease;
 }
 
-.post-img{
-
+.list-imgs {
+    width: 1000px;
+    display: flex;
+    transition: transform 1s ease;
 }
+
+.post-img {}
 
 .post-dotslider {
     position: relative;
@@ -444,19 +441,18 @@ body {
 
 .prev,
 .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-decoration: none;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    text-decoration: none;
 }
 
 .prev {
-  left: 0;
+    left: 0;
 }
 
 .next {
-  right: 0;
+    right: 0;
 }
 
 .post-action {
