--- a/style.css
+++ b/style.css
@@ -436,13 +436,15 @@ body {
 .post-dotslider {
     position: absolute;
     display: inline-flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 8px;
     /* background-color: #f8f8f8; */
-    width: 72px;
-    height: 8px;
+    width: 82px;
+    height: 18px;
+    padding: 10px 10px 10px 10px;
     left: 45%;
     bottom: 16px;
+
 }
 
 .post-dot {
